--- a/index2.html
+++ b/index2.html
@@ -42,7 +42,14 @@
             <li>Let sit at room temp for 20 minutes</li>
             <li>Eat and enjoy!</li>
         </ol>
+        <h3> Your Photos</h3>
+        <ul class="photos">
+            <li><img src="images/cake1.jpg" alt="round cake with vanilla frosting and rasberries"></li>
+            <li><img src="images/cake2.jpg" alt="heart shape choclate cake"></li>
+            <li><img src="images/cake3.jpg" alt="red heart shape birthday cake"></li>
+        </ul>
     </main>
+
 </body>
 
 </html>
