--- a/index2.html
+++ b/index2.html
@@ -44,9 +44,9 @@
         </ol>
         <h3> Your Photos</h3>
         <ul class="photos">
-            <li><img src="images/cake1.jpg" alt="round cake with vanilla frosting and rasberries"></li>
-            <li><img src="images/cake2.jpg" alt="heart shape choclate cake"></li>
-            <li><img src="images/cake3.jpg" alt="red heart shape birthday cake"></li>
+            <li><img src="images2/cake1.jpg" alt="round cake with vanilla frosting and rasberries"></li>
+            <li><img src="images2/cake2.jpg" alt="heart shape choclate cake"></li>
+            <li><img src="images2/cake3.jpg" alt="red heart shape birthday cake"></li>
         </ul>
     </main>
 
