--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Myweb</title>
-    <img src="img2.jpg">
+
     <style>
         .menue,
         li,
@@ -28,26 +28,149 @@
             padding: 35px;
             content: ""
         }
+
+        .dropbtn {
+            background-color: #588;
+            color: white;
+            padding: 16px;
+            font-size: 16px;
+            border: none;
+            cursor: pointer;
+        }
+
+        .index {
+            position: relative;
+            display: inline-block;
+        }
+
+        .menu {
+            display: inline-block;
+        }
+
+        .dropdown-content {
+            display: none;
+            position: absolute;
+            background-color: #f9f9f9;
+            min-width: 160px;
+            box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+            z-index: 1;
+        }
+
+        .dropdown-content a {
+            color: black;
+            padding: 12px 16px;
+            text-decoration: none;
+            display: block;
+        }
+
+        .dropdown-content a:hover {
+            background-color: #f1f1f1
+        }
+
+        .menu:hover .dropdown-content {
+            display: block;
+        }
+
+        .index:hover .menu:hover .dropbtn {
+            background-color: #345;
+        }
     </style>
     <link rel="stylesheet" href="normaliz.css">
 
 </head>
 
 <body>
-    <div>
-        <ul class="menue">
-            <li><a href="index.html>">Home</a></li>
-            <li><a href="https://www.apple.com">Apple</a></li>
-            <li><a href="https://www.hp.com">HP</a></li>
-            <li><a href="https://www.microsoft.com">Microsoft</a></li>
-            <li><a href="https://www.lenovo.com">Lenovo</a></li>
-            <li><a href="https://www.dell.com">Dell</a></li>
-            <li><a href="https://www.acer.com">Acer</a></li>
-            <li><a href="https://www.samsung.com">Samsung</a></li>
-            <li><a href="https://www.sony.com">Sony</a></li>
-            <li><a href="https://www.intel.com">Intel</a></li>
-            <li><a href=="https://www.asus.com">Asus</a></li>
-        </ul>
+    <header>
+        <h1>Tech Products</h1>
+        <img src="images/img2.jpg" <ul class="menue">
+    </header>
+    <div class="index">
+        <button class="dropbtn">Home</button>
+    </div>
+    <div class="menu">
+        <button class="dropbtn">Apple</button>
+        <div class="dropdown-content">
+            <a href="https://www.apple.com/iphone/">IPhone</a>
+            <a href="https://www.apple.com/ipad/">IPad</a>
+        </div>
+    </div>
+    <div class="menu">
+        <button class="dropbtn">HP</button>
+        <div class="dropdown-content">
+            <a href="http://store.hp.com/us/en/cat/laptops">Laptops</a>
+            <a href="http://store.hp.com/us/en/cat/desktops">Desktop</a>
+            <a href="http://store.hp.com/us/en/cv/printers">Printers</a>
+        </div>
+    </div>
+    <div class="menu">
+        <button class="dropbtn">microsoft</button>
+        <div class="dropdown-content">
+            <a href="https://www.microsoft.com/en-us/devices">All Mircosoft Devices</a>
+            <a href="https://www.microsoft.com/en-us/windows/windows-10-mobile-upgrade">All Windows Phones</a>
+        </div>
+    </div>
+    </div>
+    <div class="menu">
+        <button class="dropbtn">Lenovo</button>
+        <div class="dropdown-content">
+            <a href="http://www3.lenovo.com/us/en/?menu-id=Products#">Products</a>
+            <a href="https://solutions.lenovo.com/?menu-id=Solutions">Solutions</a>
+        </div>
+    </div>
+    <div class="menu">
+        <button class="dropbtn">Dell</button>
+        <div class="dropdown-content">
+            <a href="http://www.dell.com/en-us/work/shop/category/laptops?~ck=mn">Laptops</a>
+            <a href="http://www.dell.com/en-us/work/shop/category/workstations?~ck=mn">Workstations</a>
+        </div>
+    </div>
+    <div class="menu">
+        <button class="dropbtn">Acer</button>
+        <div class="dropdown-content">
+            <a href="https://www.acer.com/ac/en/US/content/group/laptops">Laptops</a>
+            <a href="https://www.acer.com/ac/en/US/content/group/tablets">Tablets</a>
+        </div>
+    </div>
+    <div class="menu">
+        <button class="dropbtn">Samsung</button>
+        <div class="dropdown-content">
+            <a href="http://www.samsung.com/us/mobile/phones/">Phones</a>
+            <a href="http://www.samsung.com/us/televisions-home-theater/tvs/">TVs</a>
+        </div>
+    </div>
+    <div class="menu">
+        <button class="dropbtn">Sony</button>
+        <div class="dropdown-content">
+            <a href="https://www.sonymobile.com/us/products/tablets/?cpint=mn_sonymobile_tablets">Tablets</a>
+            <a href="https://www.sony.com/electronics/televisions-home-theater">TVs</a>
+        </div>
+    </div>
+    <div class="menu">
+        <button class="dropbtn">Intel</button>
+        <div class="dropdown-content">
+            <a href="https://www.intel.com/content/www/us/en/laptops/laptop-products.html">Laptops</a>
+            <a href="https://www.intel.com/content/www/us/en/servers/server-products.html">Servers</a>
+        </div>
+    </div>
+    <div class="menu">
+        <button class="dropbtn">Asus</button>
+        <div class="dropdown-content">
+            <a href="https://www.asus.com/us/Phone/">Phones</a>
+            <a href="https://www.asus.com/us/Laptops/">Laptops</a>
+        </div>
+    </div>
+
+    <div id="sidebar">
+        <aside id="widget_1">Apple</aside>
+        <aside id="widget_1">HP</aside>
+        <aside id="widget_1">Microsoft</aside>
+        <aside id="widget_1">Lenovo</aside>
+        <aside id="widget_1">Dell</aside>
+        <aside id="widget_1">Acer</aside>
+        <aside id="widget_1">Samsung</aside>
+        <aside id="widget_1">Sony</aside>
+        <aside id="widget_1">Intel</aside>
+        <aside id="widget_1">Asus</aside>
     </div>
     <p>Normalize.css is a small CSS file that provides better cross-browser consistency in the default styling of HTML elements.
         It’s a modern, HTML5-ready, alternative to the traditional CSS reset.</p>
