--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
             font-size: 16px;
             border: none;
             cursor: pointer;
+            width: 119px;
         }
 
         .index {
