--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         header img {
             height: 153px;
-            width: 1350px;
+            width: 100%;
         }
 
         main {
