--- a/index2.html
+++ b/index2.html
@@ -13,6 +13,7 @@
 <body>
     <header>
         <h1 class="heading">Recipe World</h1>
+
         <nav>
             <ul>
                 <li><a href="index2.html">Home</a></li>
@@ -22,6 +23,10 @@
         </nav>
     </header>
     <main>
+        <div class="featured-image">
+            <h3>Featured Magic Cake</h3>
+            <img src="images2/backg4.jpg" alt="a delicious magic cake">
+        </div>
         <h2 class="heading">Magic Cake</h2>
         <p class="body-text">Magic cake is one of the tastiest cakes the world ahs ever known. Few have tried and lived to tell about it, and
             these are their stores.</p>
@@ -43,10 +48,13 @@
             <li>Eat and enjoy!</li>
         </ol>
         <h3> Your Photos</h3>
-        <ul class="photos">
+        <ul class="photos group">
             <li><img src="images2/cake1.jpg" alt="round cake with vanilla frosting and rasberries"></li>
             <li><img src="images2/cake2.jpg" alt="heart shape choclate cake"></li>
             <li><img src="images2/cake3.jpg" alt="red heart shape birthday cake"></li>
+            <li><img src="images2/cake4.jpg" alt="cake"></li>
+            <li><img src="images2/cake5.jpg" alt="cake5"></li>
+            <li><img src="images2/cake6.jpg" alt="cake6"></li>
         </ul>
     </main>
 
