paragaraph are added to recipies

--- a/recipes.html
+++ b/recipes.html
@@ -34,11 +34,20 @@
             </li>
             <li>
                 <h3><a href="tacosaurus-mex.html">Tacosaurus Mex</a></h3>
-                <p>It's always taco night somewhere</p>
+                <p><img src="images2/taco.jpg" alt="tacosoure tshit" style="float:left"> It's always taco night somewhere, If
+                    you love tacos or love dinosaurs, this funny burrito/taco shirt is for you.Perfect for Cinco de Mayo
+                    Celebrations, Taco Tuesday or just a regular day.This Tee shirt great as gift for Taco lovers, Mexican
+                    food fans, kids, women, men, boys and girls, friend, sister and brothers. tacosaurus taco, Taco tuesday
+                    tshirt
+                </p>
             </li>
             <li>
                 <h3><a href="florida-omelette.html">Florida Omelette</a></h3>
-                <p>Omelette you in on a little secret - this is one tasty egg.</p>
+                <p><img src="images2/Fomellete.jpg" alt="Florida omellete" style="float:left"> Omelette you in on a little secret
+                    - this is one tasty egg.Omelet Bar is transforming the most important meal of the day into the culinary
+                    experience of a lifetime. Our menu is creatively crafted from modern fresh recipes inspired by the traditional
+                    breakfast meals we all grew up savoring. Our dedication is to you and our commitment is to always provide
+                    the freshest ingredients and employ the most innovative ways to cook Breakfast, Munch and Lunch.</p>
             </li>
             <li>
                 <h3><a href="mystery-which.html">Mystery-which</a></h3>
