--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
         }
 
         header img {
-            height: 153px;
+            height: 165px;
             width: 100%;
         }
 
         main {
-            width: 1350px;
+            width: 100%;
         }
 
         .menue li+li:before {
@@ -39,13 +39,14 @@
         }
 
         .dropbtn {
-            background-color: #588;
-            color: white;
-            padding: 16px;
+            background-color: #134;
+            color: aliceblue;
+            padding: 5px;
             font-size: 16px;
-            border: none;
+            border: 4px dotted black;
             cursor: pointer;
-            width: 119px;
+            width: 116px;
+            align-items: left;
         }
 
         .index {
@@ -55,6 +56,11 @@
 
         .menu {
             display: inline-block;
+            align-content: center;
+        }
+
+        header {
+            color: #f1f1f1
         }
 
         .dropdown-content {
@@ -82,7 +88,11 @@
         }
 
         .index:hover .menu:hover .dropbtn {
-            background-color: #345;
+            background-color: #233;
+        }
+
+        #leftsidebar {
+            padding: 10px;
         }
     </style>
     <link rel="stylesheet" href="normaliz.css">
@@ -91,97 +101,101 @@
 
 <body>
     <header>
+        <img src="images/img4.jpg">
+        <ul class="menue">
 
-        <img src="images/img2.jpg" <ul class="menue">
+            <div class="index">
+                <button class="dropbtn">Home</button>
+            </div>
+            <div class="menu">
+                <button class="dropbtn">Apple</button>
+                <div class="dropdown-content">
+                    <a href="https://www.apple.com/iphone/">IPhone</a>
+                    <a href="https://www.apple.com/ipad/">IPad</a>
+                </div>
+            </div>
+            <div class="menu">
+                <button class="dropbtn">HP</button>
+                <div class="dropdown-content">
+                    <a href="http://store.hp.com/us/en/cat/laptops">Laptops</a>
+                    <a href="http://store.hp.com/us/en/cat/desktops">Desktop</a>
+                    <a href="http://store.hp.com/us/en/cv/printers">Printers</a>
+                </div>
+            </div>
+            <div class="menu">
+                <button class="dropbtn">microsoft</button>
+                <div class="dropdown-content">
+                    <a href="https://www.microsoft.com/en-us/devices">All Mircosoft Devices</a>
+                    <a href="https://www.microsoft.com/en-us/windows/windows-10-mobile-upgrade">All Windows Phones</a>
+                </div>
+            </div>
+            </div>
+            <div class="menu">
+                <button class="dropbtn">Lenovo</button>
+                <div class="dropdown-content">
+                    <a href="http://www3.lenovo.com/us/en/?menu-id=Products#">Products</a>
+                    <a href="https://solutions.lenovo.com/?menu-id=Solutions">Solutions</a>
+                </div>
+            </div>
+            <div class="menu">
+                <button class="dropbtn">Dell</button>
+                <div class="dropdown-content">
+                    <a href="http://www.dell.com/en-us/work/shop/category/laptops?~ck=mn">Laptops</a>
+                    <a href="http://www.dell.com/en-us/work/shop/category/workstations?~ck=mn">Workstations</a>
+                </div>
+            </div>
+            <div class="menu">
+                <button class="dropbtn">Acer</button>
+                <div class="dropdown-content">
+                    <a href="https://www.acer.com/ac/en/US/content/group/laptops">Laptops</a>
+                    <a href="https://www.acer.com/ac/en/US/content/group/tablets">Tablets</a>
+                </div>
+            </div>
+            <div class="menu">
+                <button class="dropbtn">Samsung</button>
+                <div class="dropdown-content">
+                    <a href="http://www.samsung.com/us/mobile/phones/">Phones</a>
+                    <a href="http://www.samsung.com/us/televisions-home-theater/tvs/">TVs</a>
+                </div>
+            </div>
+            <div class="menu">
+                <button class="dropbtn">Sony</button>
+                <div class="dropdown-content">
+                    <a href="https://www.sonymobile.com/us/products/tablets/?cpint=mn_sonymobile_tablets">Tablets</a>
+                    <a href="https://www.sony.com/electronics/televisions-home-theater">TVs</a>
+                </div>
+            </div>
+            <div class="menu">
+                <button class="dropbtn">Intel</button>
+                <div class="dropdown-content">
+                    <a href="https://www.intel.com/content/www/us/en/laptops/laptop-products.html">Laptops</a>
+                    <a href="https://www.intel.com/content/www/us/en/servers/server-products.html">Servers</a>
+                </div>
+            </div>
+            <div class="menu">
+                <button class="dropbtn">Asus</button>
+                <div class="dropdown-content">
+                    <a href="https://www.asus.com/us/Phone/">Phones</a>
+                    <a href="https://www.asus.com/us/Laptops/">Laptops</a>
+                </div>
+            </div>
     </header>
     <main>
-        <div class="index">
-            <button class="dropbtn">Home</button>
+        <div id="leftsidebar">
+            <aside id="techcomp"><a href="https://www.apple.com">Apple Home</a></aside>
+            <aside id="techcomp" <><a href="https://www.hp.com">HP Home</a></aside>
+            <aside id="techcomp"><a href="https://www.microsoft.com"> Microsoft</a></aside>
+            <aside id="techcomp"><a href="https://www.lenovo.com"> Lenovo</a></aside>
+            <aside id="techcomp"><a href="https://www.dell.com"> Dell</a></aside>
+            <aside id="techcomp"><a href="https://www.acer.com"> Acer</a></aside>
+            <aside id="techcomp"><a href="https://www.samsung.com"> Samsung</a></aside>
+            <aside id="techcomp"><a href="https://www.sony.com"> Sony</a></aside>
+            <aside id="techcomp"><a href="https://www.intel.com"> Intel</a></aside>
+            <aside id="techcomp"><a href="https://www.asus.com"> Asus</a></aside>
         </div>
-        <div class="menu">
-            <button class="dropbtn">Apple</button>
-            <div class="dropdown-content">
-                <a href="https://www.apple.com/iphone/">IPhone</a>
-                <a href="https://www.apple.com/ipad/">IPad</a>
-            </div>
-        </div>
-        <div class="menu">
-            <button class="dropbtn">HP</button>
-            <div class="dropdown-content">
-                <a href="http://store.hp.com/us/en/cat/laptops">Laptops</a>
-                <a href="http://store.hp.com/us/en/cat/desktops">Desktop</a>
-                <a href="http://store.hp.com/us/en/cv/printers">Printers</a>
-            </div>
-        </div>
-        <div class="menu">
-            <button class="dropbtn">microsoft</button>
-            <div class="dropdown-content">
-                <a href="https://www.microsoft.com/en-us/devices">All Mircosoft Devices</a>
-                <a href="https://www.microsoft.com/en-us/windows/windows-10-mobile-upgrade">All Windows Phones</a>
-            </div>
-        </div>
-        </div>
-        <div class="menu">
-            <button class="dropbtn">Lenovo</button>
-            <div class="dropdown-content">
-                <a href="http://www3.lenovo.com/us/en/?menu-id=Products#">Products</a>
-                <a href="https://solutions.lenovo.com/?menu-id=Solutions">Solutions</a>
-            </div>
-        </div>
-        <div class="menu">
-            <button class="dropbtn">Dell</button>
-            <div class="dropdown-content">
-                <a href="http://www.dell.com/en-us/work/shop/category/laptops?~ck=mn">Laptops</a>
-                <a href="http://www.dell.com/en-us/work/shop/category/workstations?~ck=mn">Workstations</a>
-            </div>
-        </div>
-        <div class="menu">
-            <button class="dropbtn">Acer</button>
-            <div class="dropdown-content">
-                <a href="https://www.acer.com/ac/en/US/content/group/laptops">Laptops</a>
-                <a href="https://www.acer.com/ac/en/US/content/group/tablets">Tablets</a>
-            </div>
-        </div>
-        <div class="menu">
-            <button class="dropbtn">Samsung</button>
-            <div class="dropdown-content">
-                <a href="http://www.samsung.com/us/mobile/phones/">Phones</a>
-                <a href="http://www.samsung.com/us/televisions-home-theater/tvs/">TVs</a>
-            </div>
-        </div>
-        <div class="menu">
-            <button class="dropbtn">Sony</button>
-            <div class="dropdown-content">
-                <a href="https://www.sonymobile.com/us/products/tablets/?cpint=mn_sonymobile_tablets">Tablets</a>
-                <a href="https://www.sony.com/electronics/televisions-home-theater">TVs</a>
-            </div>
-        </div>
-        <div class="menu">
-            <button class="dropbtn">Intel</button>
-            <div class="dropdown-content">
-                <a href="https://www.intel.com/content/www/us/en/laptops/laptop-products.html">Laptops</a>
-                <a href="https://www.intel.com/content/www/us/en/servers/server-products.html">Servers</a>
-            </div>
-        </div>
-        <div class="menu">
-            <button class="dropbtn">Asus</button>
-            <div class="dropdown-content">
-                <a href="https://www.asus.com/us/Phone/">Phones</a>
-                <a href="https://www.asus.com/us/Laptops/">Laptops</a>
-            </div>
-        </div>
-
-        <div id="sidebar">
-            <aside id="widget_1">Apple</aside>
-            <aside id="widget_1">HP</aside>
-            <aside id="widget_1">Microsoft</aside>
-            <aside id="widget_1">Lenovo</aside>
-            <aside id="widget_1">Dell</aside>
-            <aside id="widget_1">Acer</aside>
-            <aside id="widget_1">Samsung</aside>
-            <aside id="widget_1">Sony</aside>
-            <aside id="widget_1">Intel</aside>
-            <aside id="widget_1">Asus</aside>
+        <div id="content">
+            <p>Normalize.css is a small CSS file that provides better cross-browser consistency in the default styling of HTML
+                elements. It’s a modern, HTML5-ready, alternative to the traditional CSS reset.</p>
         </div>
     </main>
     <p>Normalize.css is a small CSS file that provides better cross-browser consistency in the default styling of HTML elements.
