code is corrected

--- a/recipes.html
+++ b/recipes.html
@@ -28,9 +28,11 @@
         <ul class="recipes">
             <li>
                 <h3><a href="magic-cake.html">Magic Cake</a></h3>
-                <p><img src="images2/cake7.jpg" alt="Cake image" style="float:left"> This is a dangerously delicious cak, it
-                    has a seemingly simple batter, that is mixed and baked as a single entity. (See link for the full recipe
-                    and method). When it is baked, it separates into three distinct layers</p>
+                <p>
+                    <img src="images2/cake7.jpg" alt="Cake image" style="float:left"> This is a dangerously delicious cak,
+                    it has a seemingly simple batter, that is mixed and baked as a single entity. (See link for the full
+                    recipe and method). When it is baked, it separates into three distinct layers
+                </p>
             </li>
             <li>
                 <h3><a href="tacosaurus-mex.html">Tacosaurus Mex</a></h3>
