--- a/recipes.html
+++ b/recipes.html
@@ -27,11 +27,12 @@
         <h2>Recipes</h2>
         <ul class="recipes">
             <li>
-                <h3><a href="magic-cake.html">Magic Cake</a></h3>
+
                 <p>
-                    <img src="images2/cake7.jpg" alt="Cake image" style="float:left"> This is a dangerously delicious cak,
-                    it has a seemingly simple batter, that is mixed and baked as a single entity. (See link for the full
-                    recipe and method). When it is baked, it separates into three distinct layers
+                    <img src="images2/cake7.jpg" alt="Cake image" style="float:left; padding:4px">
+                    <h3><a href="magic-cake.html">Magic Cake</a></h3>This is a dangerously delicious cak, it has a seemingly
+                    simple batter, that is mixed and baked as a single entity. (See link for the full recipe and method).
+                    When it is baked, it separates into three distinct layers
                 </p>
             </li>
             <li>
