--- a/index2.html
+++ b/index2.html
@@ -57,7 +57,9 @@
             <li><img src="images2/cake6.jpg" alt="cake6"></li>
         </ul>
     </main>
-
+    <footer>
+        <p>&copy; 2017 - Recipe World </p>
+    </footer>
 </body>
 
 </html>
