pagaraph is update with pic on the left

--- a/recipes.html
+++ b/recipes.html
@@ -36,12 +36,12 @@
                 </p>
             </li>
             <li>
+                <img src="images2/taco.jpg" alt="tacosoure tshit">
                 <h3><a href="tacosaurus-mex.html">Tacosaurus Mex</a></h3>
-                <p><img src="images2/taco.jpg" alt="tacosoure tshit" style="float:left"> It's always taco night somewhere, If
-                    you love tacos or love dinosaurs, this funny burrito/taco shirt is for you.Perfect for Cinco de Mayo
-                    Celebrations, Taco Tuesday or just a regular day.This Tee shirt great as gift for Taco lovers, Mexican
-                    food fans, kids, women, men, boys and girls, friend, sister and brothers. tacosaurus taco, Taco tuesday
-                    tshirt
+                <p>It's always taco night somewhere, If you love tacos or love dinosaurs, this funny burrito/taco shirt is for
+                    you.Perfect for Cinco de Mayo Celebrations, Taco Tuesday or just a regular day.This Tee shirt great as
+                    gift for Taco lovers, Mexican food fans, kids, women, men, boys and girls, friend, sister and brothers.
+                    tacosaurus taco, Taco tuesday tshirt
                 </p>
             </li>
             <li>
