--- a/suggest.html
+++ b/suggest.html
@@ -11,14 +11,30 @@
 </head>
 
 <body>
-    <h1>Recipe World</h1>
-    <nav>
-        <ul>
-            <li><a href="index2.html">Home</a></li>
-            <li><a href="recipes.html">Recipes</a></li>
-            <li><a href="suggest.html">Suggest</a></li>
-        </ul>
-    </nav>
+    <header>
+        <h1>Recipe World</h1>
+        <nav>
+            <ul>
+                <li><a href="index2.html">Home</a></li>
+                <li><a href="recipes.html">Recipes</a></li>
+                <li><a href="suggest.html">Suggest</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <form>
+            <label for="recipe-name">Recipe Name</label>
+            <input type="text" id="recipe-name">
+
+            <label for="ingrddients">ingrddients</label>
+            <textarea name="ingredients" id="ingredents"></textarea>
+
+            <label for="newsletter">Get Newsletter?</label>
+            <input type="checkbox" id="newsletter">
+
+            <input type="submit" value="Click to Submit">
+        </form>
+    </main>
 </body>
 
 </html>
